Ensured the page isn't too tight on small devices

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-    padding-bottom: 2rem;
+    padding: 0 0.5rem 2rem;
 }
 
 hr {
